added buy now button

--- a/src/Components/Bottle/Bottle.css
+++ b/src/Components/Bottle/Bottle.css
@@ -13,3 +13,9 @@
 .bottle p{
     font-weight: bold;
 }
+.bottle button{
+    border: 2px solid red;
+    background-color: red;
+    border-radius: 8px;
+    color: white;
+}
