--- a/src/Components/Bottle/Bottle.css
+++ b/src/Components/Bottle/Bottle.css
@@ -1,5 +1,5 @@
 .bottle{
-    border: 3px solid violet;
+    border: 3px solid orange;
     border-radius: 8px;
     padding: 20px;
     margin: 4px 4px 4px 4px;
@@ -14,8 +14,9 @@
     font-weight: bold;
 }
 .bottle button{
-    border: 2px solid red;
-    background-color: red;
+    border: 2px solid orange;
+    background-color: orange;
     border-radius: 8px;
-    color: white;
+    color: black;
+    font-weight: bold;
 }
